--- a/2023010037_Rira Dewi Sari_Pemograman Web/Tugas2_2023010037_RiraDewiSari.html
+++ b/2023010037_Rira Dewi Sari_Pemograman Web/Tugas2_2023010037_RiraDewiSari.html
@@ -13,11 +13,11 @@
         Alamat : Nalum Kauman rt 01/ rw 01, Nalumsari Jepara
     </p>
     <!--Link Web Polibang -->
-    <a href="https://www.polibang.ac.id/">Link Web Polibang</a> 
-    <br><br>
+    <p>Website Polibang: <a href="https://www.polibang.ac.id/">polibang.ac.id</a> </p>
 
     <!--Link Web Belajar Pemograman-->
-    <a href="https://www.w3schools.com/">Link Belajar Pemograman Web</a>
+    <p>Website Belajar Pemograman: <a href="https://www.w3schools.com/">w3schools.com</a></p>
+    
 
 
 </body>
