--- a/2023010037_Rira Dewi Sari_Pemograman Web/Tugas2_2023010037_RiraDewiSari.html
+++ b/2023010037_Rira Dewi Sari_Pemograman Web/Tugas2_2023010037_RiraDewiSari.html
@@ -3,22 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PENGENALAN HTML</title>
+    <title>modul 1</title>
 </head>
 <body>
-    <h1><b>SELAMAT DATANG DI WEBSITE RPL POLIBANG JEPARA</b></h1>
-    <h2>Ayo kita belajar Web Developer bersama</h2>
-    <hr>
-    <p>Nama : Rira Dewi Sari <br>
-        Alamat : Nalum Kauman rt 01/ rw 01, Nalumsari Jepara
-    </p>
+    <div align="center">
+    <table >
+        <tr>
+            <td>
+                <img src="asset image/LOGO POLIBANG.png" alt="logo polibang" height="50px">
+            </td>
+            <td>
+                <h1 style="margin: 0;" >SELAMAT DATANG DI WEBSITE RPL POLIBANG JEPARA</h1>
+            </td>
+        </tr>
+    </table>
+    <h2>Ayo kita belajar Web Developer bersama</h2>  
+
     <!--Link Web Polibang -->
-    <p>Website Polibang: <a href="https://www.polibang.ac.id/">polibang.ac.id</a> </p>
-
+    <p>Polibang: <a href="https://www.polibang.ac.id/">polibang.ac.id</a> <br>
     <!--Link Web Belajar Pemograman-->
-    <p>Website Belajar Pemograman: <a href="https://www.w3schools.com/">w3schools.com</a></p>
+    Belajar Pemograman: <a href="https://www.w3schools.com/">w3schools.com</a></p>
+    <hr>
+    </div>
+
     
-
-
+    <table width="50%">
+        <tr>
+            <td><h3 style="margin: 0;">Nama</h3></td>
+            <td> : Rira Dewi Sari</td>
+        </tr>
+        <tr>
+            <td><h3 style="margin: 0;">NIM</h3></td>
+            <td> : 2023010037</td>
+        </tr>
+        <tr>
+            <td><h3 style="margin: 0;">Prodi</h3></td>
+            <td> : Rekayasa Perangkat Lunak</td>
+        </tr>
+        <tr>
+            <td><h3 style="margin: 0;">Alamat</h3></td>
+            <td> : Kauman Nalumsari rt 01/ rw 01 Nalumsari Jepara</td>
+        </tr>
+    </table>
+    
+    <br><br><br><br>
+    <em>catatan : ini tugas 2 persiapan program pada modul 1</em>
 </body>
 </html>
