--- a/Praktikum/mahasiswa2.html
+++ b/Praktikum/mahasiswa2.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rira</title>
 </head>
 <body>
     <div align="center">
-        <img src="image/yanti.jpg" alt="yanti" width="400px" height="300px">
+        <img src="image/rira.jpg" alt="rira" width="400px" height="300px">
         <br><br><br>
         <table>
             <tr>
                 <td><h3 style="margin: 0;">Nama</h3></td>
-                <td> : Sri Nor Yanti</td>
+                <td> : Rira Dewi Sari</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">NIM</h3></td>
-                <td> : 2023010041</td>
+                <td> : 2023010037</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Prodi</h3></td>
@@ -28,17 +28,33 @@
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Alamat</h3></td>
-                <td> : Klumpit RT 3 / RW 6, Gebog Kudus</td>
+                <td> : Nalum Kauman RT 1 / RW 1, Nalumsari Jepara</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">No. Hp</h3></td>
-                <td> : <a href="whatsapp:contact=0882005332646@s.whatsapp.com">0882005332646</a></td>
+                <td> : <a href="whatsapp:contact=089522149841@s.whatsapp.com">089522149841</a></td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">email</h3></td>
-                <td> : <a href="mailto:email@example.com">yantisrinoor@gmail.com</a></td>
+                <td> : <a href="mailto:email@example.com">rirajepara1999@gmail.com</a></td>
             </tr>
         </table>
     </div>
+    <h3>Tentang</h3>
+    <p>Menjadi anak terakhir dari tiga bersaudara.</p>
+
+    <h3>Hobi</h3>
+    <ul>
+        <li>Jogging</li>
+        <li>Menikmati es</li>
+        <li>Butuh refreshing</li>
+    </ul>
+    
+    <h3>Keahlian</h3>
+    <ol>
+        <li>Menguasai Pemograman Java</li>
+        <li>Web Program HTML</li>
+    </ol>
+    
 </body>
 </html>
