--- a/Praktikum/mahasiswa4.html
+++ b/Praktikum/mahasiswa4.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>yanti</title>
 </head>
 <body>
     <div align="center">
-        <img src="image/susi.jpg" alt="susi" width="400px" height="300px">
+        <img src="image/yanti.jpg" alt="yanti" width="400px" height="300px">
         <br><br><br>
         <table>
             <tr>
                 <td><h3 style="margin: 0;">Nama</h3></td>
-                <td> : Susi Rohmawati</td>
+                <td> : Sri Nor Yanti</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">NIM</h3></td>
-                <td> : 2023010042</td>
+                <td> : 2023010041</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Prodi</h3></td>
@@ -28,17 +28,32 @@
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Alamat</h3></td>
-                <td> : Klakahkasihan RT 4 / RW 2, Gembong Pati</td>
+                <td> : Klumpit RT 3 / RW 6, Gebog Kudus</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">No. Hp</h3></td>
-                <td> : <a href="whatsapp:contact=081259522400@s.whatsapp.com">081259522400</a></td>
+                <td> : <a href="whatsapp:contact=0882005332646@s.whatsapp.com">0882005332646</a></td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">email</h3></td>
-                <td> : <a href="mailto:email@example.com">susserhmtw@gmail.com</a></td>
+                <td> : <a href="mailto:email@example.com">yantisrinoor@gmail.com</a></td>
             </tr>
         </table>
     </div>
+    <h3>Tentang</h3>
+    <p>Menjadi anak pertama dari dua bersaudara.</p>
+
+    <h3>Hobi</h3>
+    <ul>
+        <li>Sibuk ippnu</li>
+        <li>Jalan-jalan</li>
+        <li>Selfi</li>
+    </ul>
+    
+    <h3>Keahlian</h3>
+    <ol>
+        <li>Menguasai Pemograman Java</li>
+        <li>Web Program HTML</li>
+    </ol>
 </body>
 </html>
