--- a/Praktikum/mahasiswa3.html
+++ b/Praktikum/mahasiswa3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>serli</title>
 </head>
 <body>
     <div align="center">
@@ -40,5 +40,20 @@
             </tr>
         </table>
     </div>
+    <h3>Tentang</h3>
+    <p>Menjadi anak pertama dari dua bersaudara.</p>
+
+    <h3>Hobi</h3>
+    <ul>
+        <li>Memasak</li>
+        <li>Berjualan</li>
+        <li>Main game</li>
+    </ul>
+    
+    <h3>Keahlian</h3>
+    <ol>
+        <li>Menguasai Pemograman Java</li>
+        <li>Web Program HTML</li>
+    </ol>
 </body>
 </html>
