--- a/Praktikum/mahasiswa5.html
+++ b/Praktikum/mahasiswa5.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>susi</title>
 </head>
 <body>
     <div align="center">
-        <img src="image/rira.jpg" alt="rira" width="400px" height="300px">
+        <img src="image/susi.jpg" alt="susi" width="400px" height="300px">
         <br><br><br>
         <table>
             <tr>
                 <td><h3 style="margin: 0;">Nama</h3></td>
-                <td> : Rira Dewi Sari</td>
+                <td> : Susi Rohmawati</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">NIM</h3></td>
-                <td> : 2023010037</td>
+                <td> : 2023010042</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Prodi</h3></td>
@@ -28,17 +28,31 @@
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">Alamat</h3></td>
-                <td> : Nalum Kauman RT 1 / RW 1, Nalumsari Jepara</td>
+                <td> : Klakahkasihan RT 4 / RW 2, Gembong Pati</td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">No. Hp</h3></td>
-                <td> : <a href="whatsapp:contact=089522149841@s.whatsapp.com">089522149841</a></td>
+                <td> : <a href="whatsapp:contact=081259522400@s.whatsapp.com">081259522400</a></td>
             </tr>
             <tr>
                 <td><h3 style="margin: 0;">email</h3></td>
-                <td> : <a href="mailto:email@example.com">rirajepara1999@gmail.com</a></td>
+                <td> : <a href="mailto:email@example.com">susserhmtw@gmail.com</a></td>
             </tr>
         </table>
     </div>
-</body>
+    <h3>Tentang</h3>
+    <p>Menjadi anak pertama dari dua bersaudara.</p>
+
+    <h3>Hobi</h3>
+    <ul>
+        <li>Mengaca</li>
+        <li>Beres-beres</li>
+        <li>Butuh jalan-jalan</li>
+    </ul>
+    
+    <h3>Keahlian</h3>
+    <ol>
+        <li>Menguasai Pemograman Java</li>
+        <li>Web Program HTML</li>
+    </ol>
 </html>
