--- a/Praktikum/Praktikum5_RiraDewiSari.html
+++ b/Praktikum/Praktikum5_RiraDewiSari.html
@@ -23,7 +23,7 @@
         <label for="nama"> Rt/Rw :</label>
         <input type="text"><br><br>
         <label for="nama"> Kode Pos :</label>
-        <input type="number" ><br><br>
+        <input type="text"><br><br>
         <label for="nama"> Kecamatan :</label>
         <input type="text"><br><br>
         <label for="nama"> Kabupaten :</label>
@@ -41,7 +41,7 @@
         <br><br>
 
         <label for="email"><b>Email</b> :</label>
-        <input type="email" placeholder="Masukkan email"><br><br>
+        <input type="email"><br><br>
 
         <label for="photol"><b>Photo</b> :</label>
         <input type="file" placeholder="Tambahkan foto"><br><br>
