--- a/Praktikum/Praktikum6_RiraDewiSari.html
+++ b/Praktikum/Praktikum6_RiraDewiSari.html
@@ -12,7 +12,7 @@
         <frame name="header_navigationFrame" src="header2.html" />
 
         <frameset cols ="50%, 50%">
-            <frame nama="teksFrame" src="content.html">
+            <frame nama="contentFrame" src="content.html">
             <frame name="mahasiswaFrame" src="daftar_mhs.html" />       
         </frameset>
 
