--- a/Praktikum/content.html
+++ b/Praktikum/content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>visi misi & daftar dosen</title>
 </head>
 <body>
     <h2>Visi & Misi</h2>
@@ -18,20 +18,15 @@
     <li>Melaksanakan Tri Dharma peguruan tinggi.</li>
 </ol>
 
-<h3>Daftar Dosen</h3>
-<table border="1">
-    <tr>
-        <th>No</th>
-        <th>Nama</th>
-        <th>NIY</th>
-        <th>NIDN</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Miftahudin, S.Ag., M.M.</td>
-        <td>18071001</td>
-        <td>0627127801</td>
-    </tr>
-</table>
+<h3>Daftar Dosen Rekayasa Perangkat Lunak</h3>
+<ol>
+    <li>Ahmad Faiq Abror, M.Pd.</li>
+    <li>Indra Kurniawan, M.Kom.</li>
+    <li>Sofia Ulfah, M.Kom.</li>
+    <li>Ahlis Noor Kholili, M.Kom.</li>
+    <li>Kresna Rahma Aji, M.Pd.</li>
+    <li>Muhammad Dliyauddin, M.Kom.</li>
+    <li>Taufiqurrahman, M.E.</li>
+</ol>
 </body>
 </html>
