--- a/Praktikum/daftar_mhs.html
+++ b/Praktikum/daftar_mhs.html
@@ -8,11 +8,11 @@
 <body>
     <h3>Daftar Mahasiswa <br> RPL B 2023</h3>
     <ol>
-        <li><a href="mahasiswa1.html" target="mahasiswaFrame">Nabila Istighfareta A</a></li><br>
-        <li><a href="mahasiswa2.html" target="mahasiswaFrame">Rira Dewi Sari</a></li>       <br>
-        <li><a href="mahasiswa3.html" target="mahasiswaFrame">Serliya Ninta Ayu W</a></li>  <br>
-        <li><a href="mahasiswa4.html" target="mahasiswaFrame">Sri Nor Yanti</a></li>        <br>
-        <li><a href="mahasiswa5.html" target="mahasiswaFrame">Susi Rohmawati</a></li>       <br>
+        <li><a href="mahasiswa1.html" target="contentFrame">Nabila Istighfareta A</a></li><br>
+        <li><a href="mahasiswa2.html" target="contentFrame">Rira Dewi Sari</a></li>       <br>
+        <li><a href="mahasiswa3.html" target="contentFrame">Serliya Ninta Ayu W</a></li>  <br>
+        <li><a href="mahasiswa4.html" target="contentFrame">Sri Nor Yanti</a></li>        <br>
+        <li><a href="mahasiswa5.html" target="contentFrame">Susi Rohmawati</a></li>       <br>
     </ol>
 </body>
 </html>
