--- a/Praktikum/footer.html
+++ b/Praktikum/footer.html
@@ -10,10 +10,10 @@
         <table >
             <tr>
                 <td>
-                    <img src="image/LOGO POLIBANG.png" alt="logo polibang" height="40px">
+                    <img src="image/LOGO POLIBANG.png" alt="logo polibang" height="20px">
                 </td>
                 <td>
-                    <h3 style="margin: 0;" >Politeknik Balekambang Jepara</h3>
+                    <h3 style="margin: 0;" >Rira Dewi Sari</h3>
                 </td>
             </tr>
         </table>
