--- a/Praktikum/Praktikum6_RiraDewiSari.html
+++ b/Praktikum/Praktikum6_RiraDewiSari.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>modul 4</title>
 </head>
 
 <frameset rows="25%, 60%, 15%,">
 
-        <frame name="header_navigationFrame" src="header2.html" />
+        <frame name="header_navigationFrame" src="header2.html" style="background-color: #aafbff;">
 
-        <frameset cols ="50%, 50%">
-            <frame nama="contentFrame" src="content.html">
-            <frame name="mahasiswaFrame" src="daftar_mhs.html" />       
+        <frameset cols ="80%, 20%">
+            <frame name="utamaFrame" src="content.html" style="background-color: #ffe1a4;">
+            <frame src="daftar_mhs.html" style="background-color: #ff8c5f;">       
         </frameset>
 
-        <frame name="footerFrame" src="footer.html">
+        <frame name="footerFrame" src="footer.html" style="background-color: rgb(192, 192, 192);">
         
 </frameset>  
 
