--- a/Praktikum/footer.html
+++ b/Praktikum/footer.html
@@ -3,26 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>footer</title>
 </head>
 <body>
     <div align="center">
         <table >
             <tr>
-                <td>
-                    <img src="image/LOGO POLIBANG.png" alt="logo polibang" height="20px">
-                </td>
-                <td>
-                    <h3 style="margin: 0;" >Rira Dewi Sari</h3>
-                </td>
+                <td><img src="image/LOGO POLIBANG.png" alt="logo polibang" height="20px"></td>
+                <td><h4 style="margin: 0;" >Politeknik Balekambang Jepara | By : Rira Dewi Sari</h4></td>
             </tr>
         </table>
-
-        <div class="top-info ps-5">
-            <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="https://maps.app.goo.gl/7ZcDoJ1w3p29YoCX8" target="footerFrame" >Balekambang, RT.02/RW.07, Gemiring Lor, Nalumsari, Jepara, Jawa Tengah 59465</a></small> <br>
-            <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="https://wa.me/+62 856-4111-1267" >+62 856-4111-1267 (Ali Subkan)</a></small>
-        </div>
-        
-    </div>
+        <small><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.3890630899687!2d110.7751883731756!3d-6.722289565722215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e70dd4a51453157%3A0xb3c2ba4e447cc93f!2sPoliteknik%20Balekambang!5e0!3m2!1sid!2sid!4v1731544541600!5m2!1sid!2sid" 
+            target="utamaFrame">Balekambang, RT.02/RW.07, Gemiring Lor, Nalumsari, Jepara, Jawa Tengah 59465</a></small> <br>
+            <small>Kontak : <a href="whatsapp:contact=085641111267@s.whatsapp.com">085641111267</a> Muhammad Ali Subkan</small>
+    </div>          
 </body>
 </html>
