--- a/Praktikum/header2.html
+++ b/Praktikum/header2.html
@@ -20,11 +20,12 @@
     
         <nav class="navbar">
             <div class="container">
-                <ul class="menu" style="list-style-type: none; margin:0"> 
-                    <li style="display: inline;"><a href="https://www.polibang.ac.id/" target="footerFrame" style="padding: 4px;">Polibang</a></li>
-                    <li style="display: inline;"><a href="https://pmb.polibang.ac.id/#prodi" target="footerFrame" style="padding: 4px;">RPL</a></li>
-                    <li style="display: inline;"><a href="https://pmb.polibang.ac.id/#beasiswa" target="footerFrame" style="padding: 4px;">Beasiswa</a></li>
-                    <li style="display: inline;"> <a href="Praktikum5_RiraDewiSari.html" target="footerFrame" style="padding: 4px;">Pendaftaran</a></li>
+                <ul class="menu" style="list-style-type: none; margin:0; "> 
+                    <li style="display: inline;"><a href="content.html" target="utamaFrame" style="padding: 4px; text-decoration: none;" >Home</a></li>
+                    <li style="display: inline;"><a href="https://www.polibang.ac.id/" target="utamaFrame" style="padding: 4px; text-decoration: none;">Polibang</a></li>
+                    <li style="display: inline;"><a href="https://pmb.polibang.ac.id/#prodi" target="utamaFrame" style="padding: 4px; text-decoration: none;">RPL</a></li>
+                    <li style="display: inline;"><a href="https://pmb.polibang.ac.id/#beasiswa" target="utamaFrame" style="padding: 4px; text-decoration: none;">Beasiswa</a></li>
+                    <li style="display: inline;"><a href="Praktikum5_RiraDewiSari.html" target="utamaFrame" style="padding: 4px; text-decoration: none;">Pendaftaran</a></li>
                 </ul>                  
             </div>
         </nav>
