--- a/HTML/form_riradewisari.html
+++ b/HTML/form_riradewisari.html
@@ -9,7 +9,7 @@
     <h2>Form Pendaftaran Mahasiswa Baru Polibang</h2>
     <form>
         <div class="form-group">
-            Nama : 
+            <label for="nama">Nama : </label> 
             <input type="text" id="nama" nama="nama" required>
         </div>
         <div class="form-group">
@@ -21,7 +21,7 @@
             <input type="tel" id="telepon" nama="telepon" required>
         </div>
         <div clas="form-group">
-            <label for="jk">Jenis Kelamin :</label>  
+            <label for="jk">Jenis Kelamin : </label>  
             <input type="radio" id="laki-laki" nama="laki-laki"> Laki - Laki 
             <input type="radio" id="perempuan" nama="perempuan"> Perempuan 
         </div>
