--- a/HTML/gambar_riradewisari.html
+++ b/HTML/gambar_riradewisari.html
@@ -7,16 +7,17 @@
 </head>
 <body>
     <p>Rira Dewi Sari</p>
-    <img src="image/rira.jpg" alt="rira" weight="150px" height="=150px">
+   <img src="image/rira.jpg" alt="rira" width="400px" height="300px">
 
-    <p>Salah satu mahasiswa perempuan RPL B 2023</p>
-    <p>Mahasisnya perempuan RPL B 2023 diantaranya:</p>
-    <ol>
-        <li><a href="image/bila.jpg">Nabila Istighfareta Agwitanty</a></li>
-        <li><a href="image/rira.jpg">Rira Dewi Sari</a></li>
-        <li><a href="image/serli.jpg">Serliya Ninta Ayu Wardani</a></li>
-        <li><a href="image/yanti.jpg">Sri Nor Yanti</a></li>
-        <li><a href="image/susi.jpg">Susi Rohmawati</a></li>
-    </ol>
+   
+   <p>Salah satu mahasiswa perempuan RPL B 2023</p>
+   <p>Mahasisnya perempuan RPL B 2023 diantaranya:</p>
+   <ol>
+       <li><a href="image/bila.jpg">Nabila Istighfareta Agwitanty</a></li>
+       <li><a href="image/rira.jpg">Rira Dewi Sari</a></li>
+       <li><a href="image/serli.jpg">Serliya Ninta Ayu Wardani</a></li>
+       <li><a href="image/yanti.jpg">Sri Nor Yanti</a></li>
+       <li><a href="image/susi.jpg">Susi Rohmawati</a></li>
+   </ol>
 </body>
 </html>
