--- a/UTS_rira/home.html
+++ b/UTS_rira/home.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="asset/home.css">
     <link rel="stylesheet" href="asset/style.css">
     <title>home</title>
 </head>
@@ -18,7 +17,7 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="home.html" class="active">Home</a>
             <a href="picture.html">Picture</a>
             <a href="makanan.html">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
