--- a/UTS_rira/login.html
+++ b/UTS_rira/login.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="asset/login.css">
         <link rel="stylesheet" href="asset/style.css">
-        <title>Document</title>
+        <title>login</title>
     </head>
 
-    <body style="background-image: url(asset/image/backgroundLOG.jpg);">
+    <body>
         <div class="header">
             <h1>Resep Makanan</h1>
             <p>Hidangan Pembuka (appetizer), Hidangan Utama (main course), Hidangan Penutup (dessert). <br>
@@ -18,7 +19,7 @@
         
         <div class="navbar">
             <div class="topnav">
-                <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+                <a href="home.html">Home</a>
                 <a href="picture.html">Picture</a>
                 <a href="makanan.html">Makanan</a>  
                 <a href="minuman.html">Minuman</a>    
@@ -30,11 +31,11 @@
         <!-- Halaman Utama -->
         <div class="hero">
             <div class="hero-content">
-                <h1>hai gays ini punya rira cantik</h1>
-                <p>Politeknik Balekambang Jepara</p>
+                <h1>Bergabunglah Menjadi Chef</h1>
+                <p>Dengan Berbagai Hidangan</p>
                 <div class="buttons">
-                    <button class="open-button" onclick="openForm('login')">Login</button>
-                    <button class="open-button" onclick="openForm('register')">Register</button>
+                    <button class="button-login" onclick="openForm('login')">Login</button><br>
+                    <button class="button-register" onclick="openForm('register')">Register</button>
                 </div>
             </div>
         </div>
