--- a/UTS_rira/main_course.html
+++ b/UTS_rira/main_course.html
@@ -73,10 +73,15 @@
     <div id="nasi-goreng" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Nasi Goreng</h2>
-            <p>1. Tumis bawang putih dan bawang merah hingga harum.</p>
-            <p>2. Tambahkan nasi, kecap, garam, dan lada, aduk rata.</p>
-            <p>3. Sajikan dengan telur mata sapi.</p>
+            <h2>Nasi Goreng</h2>
+            <h3>📌Bahan-bahan</h3>
+            <ol>
+                <li></li>
+            </ol>
+            <h3>📌Cara Membuat</h3>
+            <ol>
+                <li></li>
+            </ol>
         </div>
     </div>
 
