--- a/UTS_rira/makanan.html
+++ b/UTS_rira/makanan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="asset/style.css">
     <title>makanan</title>
@@ -17,9 +17,9 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="home.html">Home</a>
             <a href="picture.html">Picture</a>
-            <a href="makanan.html">Makanan</a>  
+            <a href="makanan.html" class="active">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
             <a href="profile.html">Profile</a>
             <a href="login.html" class="split"><i class="fa fa-fw fa-user"></i>Login</a>
@@ -28,9 +28,9 @@
 
     <div class="listmakanan">
         <div class="flex-container">
-            <div><button class="list"><a href="appetizer.html">Hidangan Pembuka (Appetizer)</a></button></div>
-            <div><button class="list"><a href="main_course.html">Hidangan Utama (Main Course)</a></button></div>
-            <div><button class="list"><a href="dessert.html">Hidangan Penutup (Dessert)</a></button></div>  
+            <div><button><a href="appetizer.html">Hidangan Pembuka (Appetizer)</a></button></div>
+            <div><button><a href="main_course.html">Hidangan Utama (Main Course)</a></button></div>
+            <div><button><a href="dessert.html">Hidangan Penutup (Dessert)</a></button></div>  
           </div>
     </div>   
 
