--- a/UTS_rira/profile.html
+++ b/UTS_rira/profile.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="asset/style.css">   
-    <title>Profile</title>
+    <title>profile</title>
 </head>
-<body style="background-image: url(asset/image/backgroundProfil.webp);">
+<body>
     <div class="header">
         <h1>Resep Makanan</h1>
         <p>Hidangan Pembuka (Appetizer), Hidangan Utama (Main Course), Hidangan Penutup (Dessert). <br>
@@ -17,7 +17,7 @@
 
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="home.html">Home</a>
             <a href="picture.html">Picture</a>
             <a href="makanan.html">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
@@ -26,34 +26,43 @@
         </div>
     </div>
 
-    <div class="profile-container">
-        <!-- Left Section (Photo) -->
-        <div class="profile-photo">
-            <img src="asset/image/Rira Dewi Sari.jpeg" alt="Rira Dewi Sari">
-        </div>
+    <div class="profile">
+        <div class="profile-container">
+            <!-- Left Section (Photo) -->
+            <div class="profile-photo">
+                <img src="asset/image/Rira Dewi Sari.jpeg" alt="Rira Dewi Sari">
+            </div>
 
-        <!-- Right Section (Content) -->
-        <div class="profile-content">
-            <div class="bio">
-                <h2>Biografi</h2>
-                <p><strong>Nama:</strong> Rira Dewi Sari</p>
-                <p><strong>Tempat, Tanggal Lahir:</strong> Jepara, 15 Januari 2002</p>
-                <p><strong>Kelamin:</strong> Perempuan</p>
-                <p><strong>Agama:</strong> Islam</p>
-                <p><strong>Alamat:</strong> Jebol, Rt 02/01, Mayong, Jepara</p>
-            </div>
-            <div class="cv">
-                <h2>CV</h2>
-                <p><b>ALUMNI PABRIK</b></p>
-            </div>
-            <div class="education">
-                <h2>Riwayat Pendidikan</h2>
-                <ul>
-                    <li>SD Negeri 1 Jebol</li>
-                    <li>SMP Negeri 2 Mayong</li>
-                    <li>SMA Negeri 1 Jepara</li>
-                    <li>Politeknik Balekambang Jepara (Semester 3)</li>
-                </ul>
+            <!-- Right Section (Content) -->
+            <div class="profile-content">
+                <div class="bio">
+                    <h2>Biografi</h2>
+                    <p><strong>Nama:</strong> Rira Dewi Sari</p>
+                    <p><strong>Tempat, Tanggal Lahir:</strong> Jepara, 23 Desember 2003</p>
+                    <p><strong>Kelamin:</strong> Perempuan</p>
+                    <p><strong>Agama:</strong> Islam</p>
+                    <p><strong>Alamat:</strong> Nalum Kauman rt1/rw1 Nalumsari Jepara</p>
+                    <p><strong>No. Hp:</strong> 089522149841</p>
+                </div>
+                <div class="cv">
+                    <h2>CV</h2>
+                    <ul>
+                        <li>Software Engineering</li>
+                        <li>UI & UX Design</li>
+                        <li>Web Engineering</li>
+                        <li>Java Programing</li>
+                        <li>HTML, CSS, Java Script</li>
+                    </ul>
+                </div>
+                <div class="education">
+                    <h2>Riwayat Pendidikan</h2>
+                    <ul>
+                        <li>MI Sabilul Huda Nalumsari</li>
+                        <li>MTs Anur Daren</li>
+                        <li>SMA Negeri 1 Nalumsari</li>
+                        <li>Politeknik Balekambang Jepara (Semester 3)</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -62,7 +71,7 @@
     <div class="footer">
         <img src="asset/image/LOGO POLIBANG.png" width="20px" height="25px">
         <div class="foot">RPL - Politeknik Balekambang Jepara</div>
-        <p>© 2024 Rira Dewi Sari - 2023010037, All rights reserved.</p>
+        <p>Copyright © 2024 - All rights reserved || Designed By: Rira Dewi Sari - 2023010037</p>
     </div>
 </body>
 </html>
