--- a/UTS_rira/dessert.html
+++ b/UTS_rira/dessert.html
@@ -17,9 +17,9 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="index.html">Home</a>
             <a href="picture.html">Picture</a>
-            <a href="makanan.html">Makanan</a>  
+            <a href="makanan.html" class="active">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
             <a href="profile.html">Profile</a>
             <a href="login.html" class="split"><i class="fa fa-fw fa-user"></i>Login</a>
@@ -28,41 +28,42 @@
 
     <div class="container dessert">
         <section class="content">
-            <h2>Dessert</h2>
+            <h2>✨Dessert✨</h2>
+            <h3>Hidangan Penutup</h3>
             <div class="grid-container">
                 <!-- Pudding Coklat -->
                 <div class="card">
-                    <a href="#pudding" class="resep-button">
+                    <a href="#pudding">
                         <img src="asset/image/dessert/pudding.jpe" alt="Pudding Coklat">
-                        <p>Pudding Coklat</p>
+                        <button class="resep-button">Pudding Coklat</button>
                     </a>
                 </div>
                 <!-- Es Krim Vanila -->
                 <div class="card">
-                    <a href="#eskrim" class="resep-button">
+                    <a href="#eskrim">
                         <img src="asset/image/dessert/escreamVanila.jpg" alt="Es Krim Vanila">
-                        <p>Es Krim Vanila</p>
+                        <button class="resep-button">Es Krim Vanilla</button>
                     </a>
                 </div>
                 <!-- Pancake -->
                 <div class="card">
-                    <a href="#pancake" class="resep-button">
+                    <a href="#pancake">
                         <img src="asset/image/dessert/pancake.jpeg" alt="Pancake">
-                        <p>Pancake</p>
+                        <button class="resep-button">Pancake</button>
                     </a>
                 </div>
                 <!-- Klepon -->
                 <div class="card">
-                    <a href="#klepon" class="resep-button">
+                    <a href="#klepon">
                         <img src="asset/image/dessert/klepon1.jpg" alt="Klepon">
-                        <p>Klepon</p>
+                        <button class="resep-button">Klepon</button>
                     </a>
                 </div>
                 <!-- Puding Mangga -->
                 <div class="card">
                     <a href="#puding-mangga" class="resep-button">
                         <img src="asset/image/dessert/puding mangga.jpeg" alt="Puding Mangga">
-                        <p>Puding Mangga</p>
+                        <button class="resep-button">Pudding Mangga</button>
                     </a>
                 </div>
             </div>
@@ -73,7 +74,7 @@
     <div id="pudding" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Pudding Coklat</h2>
+            <h2>📌Resep Pudding Coklat</h2>
             <p>1. Campur susu cair, coklat bubuk, dan gula pasir.</p>
             <p>2. Masak hingga mendidih, tambahkan agar-agar bubuk.</p>
             <p>3. Tuang ke cetakan dan dinginkan.</p>
@@ -83,7 +84,7 @@
     <div id="eskrim" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Es Krim Vanila</h2>
+            <h2>📌Resep Es Krim Vanila</h2>
             <p>1. Campur susu cair, gula, dan ekstrak vanila.</p>
             <p>2. Kocok whipped cream hingga kaku.</p>
             <p>3. Gabungkan dan bekukan selama 4 jam.</p>
@@ -93,7 +94,7 @@
     <div id="pancake" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Pancake</h2>
+            <h2>📌Resep Pancake</h2>
             <p>1. Campur tepung, gula, baking powder, dan telur.</p>
             <p>2. Tambahkan susu, aduk hingga rata.</p>
             <p>3. Goreng di wajan datar dengan api kecil.</p>
@@ -103,7 +104,7 @@
     <div id="klepon" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Klepon</h2>
+            <h2>📌Resep Klepon</h2>
             <p>1. Campur tepung ketan dan air pandan.</p>
             <p>2. Isi dengan gula merah, bentuk bulat.</p>
             <p>3. Rebus hingga matang, gulingkan di kelapa parut.</p>
@@ -113,7 +114,7 @@
     <div id="puding-mangga" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Puding Mangga</h2>
+            <h2>📌Resep Puding Mangga</h2>
             <p>1. Haluskan daging mangga.</p>
             <p>2. Campur mangga dengan susu, gula, dan agar-agar bubuk.</p>
             <p>3. Masak hingga mendidih, tuang ke cetakan, dinginkan.</p>
@@ -123,7 +124,7 @@
     <!-- Footer -->
     <div class="footer">
         <img src="asset/image/LOGO POLIBANG.png" width="20px" height="25px">
-        <div class="foot">RPL - Politeknik Balekambang Jepara</div>
+        <div class="foot">RPL - <a href="https://www.polibang.ac.id/">Politeknik Balekambang Jepara</a> </div>
         <p>Copyright © 2024 - All rights reserved || Designed By: Rira Dewi Sari - 2023010037</p>
     </div>
 </body>
