--- a/UTS_rira/main_course.html
+++ b/UTS_rira/main_course.html
@@ -17,9 +17,9 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+            <a href="index.html">>Home</a>
             <a href="picture.html">Picture</a>
-            <a href="makanan.html">Makanan</a>  
+            <a href="makanan.html" class="active">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
             <a href="profile.html">Profile</a>
             <a href="login.html" class="split"><i class="fa fa-fw fa-user"></i>Login</a>
@@ -28,41 +28,42 @@
 
     <div class="container main-course">
         <section class="content">
-            <h2>Hidangan Utama</h2>
+            <h2>✨Main Course✨</h2>
+            <h3>Hidangan Utama</h3>
             <div class="grid-container">
                 <!-- Nasi Goreng -->
                 <div class="card">
-                    <a href="#nasi-goreng" class="resep-button">
+                    <a href="#nasi-goreng">
                         <img src="asset/image/maincourse/nasi goreng.jpg" alt="Nasi Goreng">
-                        <p>Nasi Goreng</p>
+                       <button class="resep-button">Nasi Goreng</button>
                     </a>
                 </div>
                 <!-- Ayam Bakar -->
                 <div class="card">
-                    <a href="#ayam-bakar" class="resep-button">
+                    <a href="#ayam-bakar">
                         <img src="asset/image/maincourse/ayam bakar.webp" alt="Ayam Bakar">
-                        <p>Ayam Bakar</p>
+                        <button class="resep-button">Ayam Bakar</button>
                     </a>
                 </div>
                 <!-- Sate Ayam -->
                 <div class="card">
-                    <a href="#sate-ayam" class="resep-button">
+                    <a href="#sate-ayam">
                         <img src="asset/image/maincourse/sate ayam.jpg" alt="Sate Ayam">
-                        <p>Sate Ayam</p>
+                        <button class="resep-button">Sate Ayam</button>
                     </a>
                 </div>
                 <!-- Soto Ayam -->
                 <div class="card">
-                    <a href="#soto-ayam" class="resep-button">
+                    <a href="#soto-ayam">
                         <img src="asset/image/maincourse/soto ayam.jpeg" alt="Soto Ayam">
-                        <p>Soto Ayam</p>
+                        <button class="resep-button">Sate Ayam</button>
                     </a>
                 </div>
                 <!-- Ikan Bakar -->
                 <div class="card">
-                    <a href="#ikan-bakar" class="resep-button">
+                    <a href="#ikan-bakar">
                         <img src="asset/image/maincourse/ikan bakar.jpg" alt="Ikan Bakar">
-                        <p>Ikan Bakar</p>
+                        <button class="resep-button">Ikan Bakar</button>
                     </a>
                 </div>
             </div>
@@ -76,11 +77,24 @@
             <h2>Nasi Goreng</h2>
             <h3>📌Bahan-bahan</h3>
             <ol>
-                <li></li>
+                <li>2 piring nasi putih</li>
+                <li>2 siung bawang putih</li>
+                <li>2 butir bawang merah </li>
+                <li>1 butir telur</li>
+                <li>2 sdm kecap manis</li>
+                <li>2 sdm minyak goreng/margarin</li>
+                <li>Garam dan lada secukupnya</li>
+                <li>Irisan mentimun, tomat, kerupuk, ayam suwir, atau sosis goreng.</li>
             </ol>
             <h3>📌Cara Membuat</h3>
             <ol>
-                <li></li>
+                <li>Panaskan minyak atau margarin dalam wajan. Tumis bawang putih dan bawang merah hingga harum. <br>
+                    Jika suka pedas, tambahkan cabai rawit cincang.</li>
+                <li>Geser tumisan ke pinggir wajan, masukkan telur, lalu orak-arik hingga matang.</li>
+                <li>Masukkan nasi putih, aduk rata dengan telur dan tumisan bawang.</li>
+                <li>Tambahkan kecap manis, saus tiram, kecap asin, garam, dan lada. Aduk hingga nasi berwarna merata dan bumbu tercampur sempurna.</li>
+                <li>Koreksi rasa. Jika sudah pas, angkat dan sajikan nasi goreng di piring saji.</li>
+                <li>Hias dengan irisan mentimun, tomat, kerupuk, atau topping sesuai selera.</li>
             </ol>
         </div>
     </div>
@@ -88,7 +102,7 @@
     <div id="ayam-bakar" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Ayam Bakar</h2>
+            <h2>📌Resep Ayam Bakar</h2>
             <p>1. Marinasi ayam dengan bumbu halus selama 30 menit.</p>
             <p>2. Panggang ayam hingga matang dan kecoklatan.</p>
             <p>3. Sajikan dengan sambal dan lalapan.</p>
@@ -98,7 +112,7 @@
     <div id="sate-ayam" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Sate Ayam</h2>
+            <h2>📌Resep Sate Ayam</h2>
             <p>1. Potong daging ayam, tusuk dengan tusuk sate.</p>
             <p>2. Lumuri dengan bumbu kacang, panggang hingga matang.</p>
             <p>3. Sajikan dengan lontong dan bawang goreng.</p>
@@ -108,7 +122,7 @@
     <div id="soto-ayam" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Soto Ayam</h2>
+            <h2>📌Resep Soto Ayam</h2>
             <p>1. Rebus ayam dengan bumbu soto hingga matang.</p>
             <p>2. Sajikan dengan bihun, telur, dan kuah kaldu.</p>
             <p>3. Tambahkan jeruk nipis dan sambal sesuai selera.</p>
@@ -118,7 +132,7 @@
     <div id="ikan-bakar" class="popup-modal">
         <div class="popup-content">
             <a href="#" class="close-button">&times;</a>
-            <h2>Resep Ikan Bakar</h2>
+            <h2>📌Resep Ikan Bakar</h2>
             <p>1. Lumuri ikan dengan bumbu oles, panggang hingga matang.</p>
             <p>2. Balik ikan secara berkala agar matang merata.</p>
             <p>3. Sajikan dengan sambal terasi dan nasi hangat.</p>
@@ -128,7 +142,7 @@
     <!-- Footer -->
     <div class="footer">
         <img src="asset/image/LOGO POLIBANG.png" width="20px" height="25px">
-        <div class="foot">RPL - Politeknik Balekambang Jepara</div>
+        <div class="foot">RPL - <a href="https://www.polibang.ac.id/">Politeknik Balekambang Jepara</a> </div>
         <p>Copyright © 2024 - All rights reserved || Designed By: Rira Dewi Sari - 2023010037</p>
     </div>
 </body>
