--- a/UTS_rira/appetizer.html
+++ b/UTS_rira/appetizer.html
@@ -17,7 +17,7 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="picture.html">Picture</a>
             <a href="makanan.html" class="active">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
@@ -33,6 +33,43 @@
             <div class="grid-container">
                 <!-- Salad Buah -->
                 <div class="card">
+                    <img src="asset/image/appetizer/salad buah.jpg" alt="Salad Buah">
+                    <a href="#salad" >                        
+                        <button class="resep-button">Salad Buah</button>
+                    </a>
+                </div>
+                <!-- Dimsum -->
+                <div class="card">
+                    <img src="asset/image/appetizer/dimsum.jpg" alt="Dimsum">
+                    <a href="#dimsum">                        
+                        <button class="resep-button">Dimsum</button>
+                    </a>
+                </div>
+                <!-- Lumpia Semarang -->
+                <div class="card">
+                    <img src="asset/image/appetizer/lumpia semarang.jpg" alt="Lumpia Semarang">
+                    <a href="#lumpia">                        
+                        <button class="resep-button">Lumpia Semarang</button>
+                    </a>
+                </div>
+                <!-- Somtam -->
+                <div class="card">
+                    <img src="asset/image/appetizer/somtam.jpg" alt="Somtam">
+                    <a href="#somtam">                        
+                        <button class="resep-button">Somtam Thailand</button>
+                    </a>
+                </div>
+                <!-- Baked -->
+                <div class="card">
+                    <img src="asset/image/appetizer/baked brie.jpg" alt="Baked">
+                    <a href="#baked">                        
+                        <button class="resep-button">Baked</button>
+                    </a>
+                </div>
+
+
+                 <!-- Salad Buah -->
+                 <div class="card">
                     <img src="asset/image/appetizer/salad buah.jpg" alt="Salad Buah">
                     <a href="#salad" >                        
                         <button class="resep-button">Salad Buah</button>
@@ -228,7 +265,7 @@
     <!-- Footer -->
     <div class="footer">
         <img src="asset/image/LOGO POLIBANG.png" width="20px" height="25px">
-        <div class="foot">RPL - Politeknik Balekambang Jepara</div>
+        <div class="foot">RPL - <a href="https://www.polibang.ac.id/">Politeknik Balekambang Jepara</a> </div>
         <p>Copyright © 2024 - All rights reserved || Designed By: Rira Dewi Sari - 2023010037</p>
     </div>
 </body>
