--- a/UTS_rira/makanan.html
+++ b/UTS_rira/makanan.html
@@ -17,7 +17,7 @@
     
     <div class="navbar">
         <div class="topnav">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="picture.html">Picture</a>
             <a href="makanan.html" class="active">Makanan</a>  
             <a href="minuman.html">Minuman</a>    
@@ -36,7 +36,7 @@
 
     <div class="footer">
         <img src="asset/image/LOGO POLIBANG.png" width="20px" height="25px" >
-        <div class="foot">RPL - Politeknik Balekambang Jepara</div>
+        <div class="foot">RPL - <a href="https://www.polibang.ac.id/">Politeknik Balekambang Jepara</a> </div>
         <p>Copyright © 2024 - All rights reserved || Designed By: Rira Dewi Sari - 2023010037</p>
     </div>
     
