--- a/CSS/webrpl/visimisi.html
+++ b/CSS/webrpl/visimisi.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="webrpl.css">
+    <link rel="stylesheet" href="style.css">
     <title>webrpl</title>
 </head>
 <body>
     <div class="header">
-        <h1>Politeknik Balekambang Jepara</h1>
-        <h3>Rekayasa Perangkat Lunak</h3>
+        <h1 class="head">Politeknik Balekambang Jepara </h1>
+        <h2>Rekayasa Perangkat Lunak</h2>
     </div>
 
     <div class="row">
@@ -21,33 +21,26 @@
 
             <div class="card2">
                 <div class="topnav">
-                <a href="praktikum1_modul5.html">HOME</a>
-                <a href="visimisi.html">VISI & MISI</a>
+                <a href="index.html">HOME</a>
+                <a href="visimisi.html" class="active">VISI & MISI</a>
                 <a href="https://www.polibang.ac.id/">INFORMASI</a>
                 <a href="dosen.html">DOSEN</a>
                 <a href="https://www.instagram.com/pmbpolibang/">KONTAK</a>
-                <a href="https://www.instagram.com/politeknikbalekambang/">GALERI</a>
+                <a href="https://www.instagram.com/himapro.rpl/">GALERI</a>
                 </div>
             </div>
             
             <div class="card3">
-                <h1>Selamat Datang</h1>
-                <p>Belajar Membuat Desain Web menggunakan HTML & CSS dengan mudah. <br><br>
-                Untuk belajar HTML klik halaman <a href="https://www.w3schools.com/html/default.asp">HTML</a> 
-                dan belajar CSS ke halaman <a href="https://www.w3schools.com/css/default.asp">CSS</a></p>
-
-                <h1>Galeri</h1>
-                <div class="row">
-                    <div class="column">
-                      <img src="image/rpl.png" alt="Snow" style="width: 100%;">
-                    </div>
-                    <div class="column">
-                      <img src="image/rpl.png" alt="Forest" style="width:100%">
-                    </div>
-                    <div class="column">
-                      <img src="image/rpl.png" alt="Mountains" style="width:100%">
-                    </div>
-                </div>
+                <h3>VISI</h3>
+                <p> <i>Menjadi Politeknik yang Berdaya Saing Global, Professional dan beraqidah Ahlus Sunnah Wal Jama’ah</i></p>
+                
+                <h3>MISI</h3>
+                <ol>
+                    <li>Menyelenggarakan dan mengembangkan pendidikan yang mampu berdaya saing dalam era globalisasi</li>
+                    <li>Menyelenggarakan dan menghasilkan pendidikan yang profesional sesuai dengan prinsip <i>Good University Governance;</i></li>
+                    <li>Membangun komunitas yang ikhlas, toleransi, moderat dan religi dalam menjaga Negara Kesatuan Republik Indonesia;</li>
+                    <li>Melaksanakan Tri Dharma peguruan tinggi.</li>
+                </ol> 
             </div>
         </div>
 
